zipkin-ui/k8s/deployment.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: zipkin
spec:
  selector:
    matchLabels:
      app: zipkin
  serviceName: "zipkin-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - env:
        - name: MY_NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: MY_POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: MY_POD_NAMESPACE # 传入当前命名空间
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: MY_POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: MY_IN_SERVICE_NAME # 因为pod 通过域名互相访问，需要使用headless 服务名称
          value: zipkin-service
        - name: ZIPKIN_APPLICATION_NAME
          value: "zipkin"
        - name: ZIPKIN_REPLICAS
          value: "1"
        image:  containers.ssii.com/springcloud/zipkin:v1
        imagePullPolicy: IfNotPresent
        imagePullSecret: nexus-docker
        name: zipkin-container
        ports:
        - containerPort: 8769
          protocol: TCP
