zipkin-ui/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
  labels:
    app: zipkin-service
  namespace: spring-cloud    
spec:
  clusterIP: None
  ports:
  - port: 8769
    protocol: TCP
    targetPort: 8769
  selector:
    app: zipkin
  type: ClusterIP
